# alembic_migration

./: .env.example  .gitignore  connect_db.py  docker-compose.yml  my_select.py  pyproject.toml  seeds.py
alembic/: env.py
alembic/versions/: ce441dba2095_init.py
models/: models.py
