[project]
name = "alembic-migration"
version = "0.1.0"
description = ""
authors = [
    {name = "Anton Bilyi",email = "anthonybelyj@protonmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "alembic (>=1.18.4,<2.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "faker (>=40.23.0,<41.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
